--- a/src/modulo-04/mestrecuca/.project
+++ b/src/modulo-04/mestrecuca/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mestreCuca</name>
+	<name>mestrecuca</name>
 	<comment></comment>
 	<projects>
 	</projects>
