--- a/src/modulo-04/filmator-web/pom.xml
+++ b/src/modulo-04/filmator-web/pom.xml
@@ -38,6 +38,16 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	
 	</dependencies>
 </project>
